# estoque-api

./: pyproject.toml
api/: settings.py  urls.py
api/clientes/: admin.py  urls.py
api/clientes/migrations/: 0001_initial.py  0002_alter_clientemodel_nu_telefone.py  0003_alter_clientemodel_ds_email.py  0004_alter_clientemodel_ds_endereco_and_more.py
api/clientes/models/: clientes.py
api/clientes/serializers/: clientes.py
api/clientes/views/: cliente.py
api/compras/: admin.py
api/compras/migrations/: 0001_initial.py  0002_compraprodutomodel.py
api/compras/models/: compra_produto.py  compras.py
api/fornecedores/: admin.py  apps.py
api/fornecedores/migrations/: 0001_initial.py
api/fornecedores/models/: fornecedores.py
api/fornecedores/serializers/: fornecedores.py
api/fornecedores/views/: fornecedores.py
api/produtos/: admin.py  apps.py
api/produtos/migrations/: 0001_initial.py  0002_alter_produtomodel_nu_quantidade_estoque.py  0003_remove_produtomodel_fk_tipo_produtomodel_ds_tipo_and_more.py
api/produtos/models/: categorias.py  produtos.py  tipos.py
api/produtos/serializers/: categorias.py  produtos.py  tipos.py
api/produtos/views/: produtos.py
api/servicos/: admin.py  apps.py
api/servicos/migrations/: 0001_initial.py
api/servicos/models/: servicos.py
api/servicos/serializers/: servicos.py
api/servicos/views/: servicos.py
api/vendas/: admin.py  apps.py  urls.py
api/vendas/migrations/: 0001_initial.py  0002_vendaprodutomodel.py  0002_vendasmodel_bo_pago.py  0002_vendasservicomodel.py  (+4 more)
docs/: Pet-Shot - Requisitos.md
(+7 files in other folders)
